# seed-engine

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  appveyor.yml
Engine/: CMakeLists.txt
Engine/CMake/: GoogleTest.cmake  Standard.cmake
Engine/Docs/: CMakeLists.txt  Doxyfile
Engine/Source/: CMakeLists.txt
Engine/Source/Editor/: CMakeLists.txt
Engine/Source/Editor/AssetUtilities/: CMakeLists.txt  Module.json
Engine/Source/Editor/AssetUtilities/Private/: MeshImporter.cpp
Engine/Source/Editor/AssetUtilities/Public/: AssetUtilities.hpp  AssetUtilitiesAPI.hpp  MeshImporter.hpp
Engine/Source/Editor/AssetUtilities/Test/: TestEditorAssetUtilitiesMeshImporter.cpp
Engine/Source/Editor/MeshImporter/: CMakeLists.txt  Module.json
Engine/Source/Editor/MeshImporter/Public/: MeshImporter.hpp  MeshImporterAPI.hpp
Engine/Source/Editor/MeshImporter/Test/: TestEditorMeshImporter.cpp
Engine/Source/Editor/SeedEngineEditor/: CMakeLists.txt  Module.json
Engine/Source/Editor/SeedEngineEditor/Private/: EditorApplication.cpp
Engine/Source/Editor/SeedEngineEditor/Public/: SeedEngineEditor.hpp  SeedEngineEditorAPI.hpp
Engine/Source/Editor/SeedEngineEditor/Test/: TestEditorEditorCore.cpp
Engine/Source/Runtime/: CMakeLists.txt
Engine/Source/Runtime/AssetManager/: CMakeLists.txt  Module.json
Engine/Source/Runtime/AssetManager/Private/: Asset.cpp  AssetLibrary.cpp
Engine/Source/Runtime/AssetManager/Public/: Asset.hpp  AssetLibrary.hpp  AssetManager.hpp  AssetManagerAPI.hpp
Engine/Source/Runtime/AssetManager/Test/: TestRuntimeAssetManager.cpp  TestRuntimeAssetManagerAsset.cpp  TestRuntimeAssetManagerAssetLibrary.cpp
Engine/Source/Runtime/Collections/: CMakeLists.txt  Module.json
Engine/Source/Runtime/Collections/Public/: Array.hpp  ArrayList.hpp  Collection.hpp  Collections.hpp  CollectionsAPI.hpp  Dictionary.hpp  Iterator.hpp  LinkedList.hpp  List.hpp  Map.hpp  Pair.hpp  Queue.hpp  Stack.hpp  Tree.hpp
Engine/Source/Runtime/Collections/Test/: TestRuntimeCollections.cpp  TestRuntimeCollectionsArray.cpp  TestRuntimeCollectionsLinkedList.cpp
Engine/Source/Runtime/Common/: CMakeLists.txt  Module.json
Engine/Source/Runtime/Common/Private/: FunctionPointer.cpp  ISerializable.cpp  Log.cpp  MemberFunctionPointer.cpp  String.cpp  System.cpp
Engine/Source/Runtime/Common/Public/: Common.hpp  CommonAPI.hpp  CommonDefinitions.hpp  CommonMacros.hpp  CommonSTL.hpp  CommonTraits.hpp  Debug.hpp  Delegate.hpp  FunctionPointer.hpp  GraphicsMode.hpp  ISerializable.hpp  Log.hpp  MemberFunctionPointer.hpp  Platform.hpp  SmartPointer.hpp  String.hpp  System.hpp
Engine/Source/Runtime/Common/Test/: TestRuntimeCommon.cpp  TestRuntimeCommonDelegate.cpp  TestRuntimeCommonFunctionPointer.cpp  TestRuntimeCommonISerializable.cpp  TestRuntimeCommonLog.cpp  TestRuntimeCommonMemberFunctionPointer.cpp  TestRuntimeCommonTime.cpp
Engine/Source/Runtime/Containers/: CMakeLists.txt  Module.json
Engine/Source/Runtime/Containers/Public/: Array.hpp  Containers.hpp  ContainersAPI.hpp
Engine/Source/Runtime/Containers/Test/: TestRuntimeContainers.cpp
Engine/Source/Runtime/EngineCore/: CMakeLists.txt  Module.json
Engine/Source/Runtime/EngineCore/Private/: Application.cpp  Program.cpp  Time.cpp
Engine/Source/Runtime/EngineCore/Public/: Application.hpp  EngineCore.hpp  EngineCoreAPI.hpp  EntryPoint.hpp  Program.hpp  Time.hpp
Engine/Source/Runtime/EngineCore/Test/: TestRuntimeEngineCore.cpp  TestRuntimeEngineCoreApplication.cpp  TestRuntimeEngineCoreLog.cpp  TestRuntimeEngineCorePlatform.cpp  (+2 more)
Engine/Source/Runtime/Environment/: CMakeLists.txt  Module.json
Engine/Source/Runtime/EventCore/: CMakeLists.txt  Module.json
Engine/Source/Runtime/FileExchange/: CMakeLists.txt  Module.json
Engine/Source/Runtime/GameplayCore/: CMakeLists.txt  Module.json
Engine/Source/Runtime/Graphics/: CMakeLists.txt  Module.json
Engine/Source/Runtime/Input/: CMakeLists.txt  Module.json
Engine/Source/Runtime/Math/: CMakeLists.txt  Module.json
Engine/Source/Runtime/Networking/: CMakeLists.txt  Module.json
Engine/Source/Runtime/Physics/: CMakeLists.txt  Module.json
Engine/Source/Runtime/Renderer/: CMakeLists.txt  Module.json
Engine/Source/Runtime/Rendering/: CMakeLists.txt  Module.json
Engine/Source/Runtime/UserInterface/: CMakeLists.txt  Module.json
core/: CMakeLists.txt  CMakeLists.txt.in
core/data/: defaults.ini  quad.mesh  test_config.ini
core/data/assets/shaders/: default.vs.glsl  test.fs.glsl  test.vs.glsl
core/data/materials/templates/: material_template.tmp
core/data/models/primatives/: cube.mesh  quad.mesh  triangle.mesh
core/data/shader/: default.fs.glsl  default.vs.glsl
core/data/shaders/: default.fs.glsl  test.vs.glsl
core/docs/: MeshFileSpecification.md
core/docs/spec/: MeshFormat.md
core/include/: Actor.hpp  Asset.hpp  Camera.hpp  Color.hpp  Core.hpp  Entity.hpp  Entry.hpp  Event.hpp  Image.hpp  Input.hpp  Log.hpp  Math.hpp  Matrix.hpp  Mesh.hpp  Noise.hpp  Nullable.hpp  Object.hpp  Parser.hpp  Program.hpp  Property.hpp  Quaternion.hpp  Random.hpp  Renderer.hpp  Shader.hpp  Time.hpp  Transform.hpp  Vector.hpp  Wave.hpp  Window.hpp  seedengine
core/samples/: SampleApp.cpp
core/src/: Actor.cpp  Asset.cpp  CMakeLists.txt  Camera.cpp  Color.cpp  Event.cpp  Image.cpp  Log.cpp  Matrix.cpp  Mesh.cpp  Noise.cpp  Nullable.cpp  Object.cpp  Parser.cpp  Program.cpp  Quaternion.cpp  Random.cpp  Renderer.cpp  Shader.cpp  Time.cpp  Transform.cpp  Vector.cpp  Window.cpp
core/test/: CMakeLists.txt  test_actor.cpp  test_asset.cpp  test_camera.cpp  test_color.cpp  test_event.cpp  test_image.cpp  test_input.cpp  test_log.cpp  test_main.cpp  test_math.cpp  test_matrix.cpp  test_mesh.cpp  test_noise.cpp  test_nullable.cpp  test_object.cpp  test_parser.cpp  test_program.cpp  test_property.cpp  test_quaternion.cpp  test_random.cpp  test_renderer.cpp  test_shader.cpp  test_time.cpp  test_transform.cpp  test_vector.cpp  test_wave.cpp  test_window.cpp
editor/: .project_conf  CMakeLists.txt
editor/src/: CMakeLists.txt  SampleApp.cpp
editor/test/: CMakeLists.txt
(+311 files in other folders)
