# Documentation CMakeLists.txt

# set(DOXY_DEPS_DIRECTORY ${PROJECT_SOURCE_DIR}/Source/Extern)
set(DOXY_SOURCE_DIRECTORY ${PROJECT_SOURCE_DIR}/Source)
set(DOXY_DOCS_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR})
set(DOXY_OUTPUT_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR})

# configure_file(doxy.in doxy.cfg @ONLY)

# add_custom_target(
#     docs ALL
#     COMMAND ${DOXYGEN_EXECUTABLE} ${CMAKE_CURRENT_BINARY_DIR}/doxy.cfg
#     WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}
#     VERBATIM
#     SOURCES
#         doxy.in
# )

# install(
#     DIRECTORY ${DOXY_OUTPUT_DIRECTORY}/HTML
#     DESTINATION share/${ENGINE_NAME_FULL}/
# )